--- a/build.gradle
+++ b/build.gradle
@@ -7,5 +7,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation
+    testImplementation (
+
+            "org.junit.jupiter:junit-jupiter:5.9.2")
+}
+test {
+    useJUnitPlatform()
 }
