--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,12 @@ repositories {
 
 dependencies {
     testImplementation (
-
-            "org.junit.jupiter:junit-jupiter:5.9.2")
+            "com.codeborne:selenide:6.14.0",
+            "org.junit.jupiter:junit-jupiter:5.9.3",
+            "org.slf4j:slf4j-simple:2.0.7"
+    )
 }
+
 test {
     useJUnitPlatform()
 }
